@@ -22,6 +22,7 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Fixed Variables.GenerateHelpText() to now use the sort parameter. Due to incorrect 2to3 fixer changes 
       8 years ago it was being used as a boolean parameter.  Now you can specify sort to be a callable, or boolean
       value. (True = normal sort). Manpage also updated.
+    - Fixed Tool loading logic from exploding sys.path with many site_scons/site_tools prepended on py3.
 
   From Thomas Berg:
     - Fixed a regression in scons-3.0.0 where "from __future__ import print_function" was imposed
